<resources>
    <string name="app_name">PaisehPay</string>
    <string name="first_fragment_label">PaisehPay</string>
    <string name="second_fragment_label">PaisehPay</string>


    //Signin page
    <string name="app_icon">Insert App icon here</string>
    <string name="login_text">Login</string>
    <string name="forget_password_text">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up_prompt">Don\'\t have an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="login_prompt1">Email</string>
    <string name="login_prompt2">Password</string>
    <string name="wrong_login_details">Username or password incorrect, please re-enter.</string>

    //signup page
    <string name="welcome">Welcome!</string>
    <string name="accidentally_sign_up">If you already have an account with us, sign in here</string>
    <string name="new_username">Enter a unique username</string>
    <string name="new_email">Enter your email address</string>
    <string name="new_password">Enter a unique password</string>
    <string name="new_password_reenter">Re-enter your password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    //change password
    <string name="change_password">Change Password</string>
    <string name="enter_email">Enter your email address</string>
    <string name="change_password_prompt">We sent a 4 digit reset code to your email account:  </string>
    <string name="invalid_email">The email you have entered does not exist within our database. Alternatively, create a new account</string>
    <string name="no_code_prompt">Did not receive your code?</string>
    <string name="resend_code_button">Resend code</string>
    <string name="enter_number_1">Enter first digit</string>
    <string name="enter_number_2">Enter second digit</string>
    <string name="enter_number_3">Enter third digit</string>
    <string name="enter_number_4">Enter fourth digit</string>
    <string name="blank">  </string>
    <string name="password_dont_match">Passwords do not match, please try again</string>
    <string name="password_match">Passwords changed!</string>

    //menu
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="add">Add Expense</string>
    <string name="friends">Friends</string>
    <string name="user">Profile</string>
    <string name="scan">Scan Receipt</string>

    //home fragment
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_user">Hello username!</string>
    <string name="personal_summary">Here\'s a summary of your expenditure</string>
    <string name="today">Today, 20 March 2025</string>
    <string name="owe">You owe</string>
    <string name="owed">You are owed</string>
    <string name="owe_amount">$155.27</string>
    <string name="owed_amount">$27.84</string>
    <string name="more_details">More details</string>
    <string name="group_name">Group Name</string>
    <string name="group_created">Created 12/12/2024</string>
    <string name="group_owed">You are owed $120.25</string>
    <string name="group_owe">You owe $43.70</string>
    <string name="group_homepage">Group Homepage</string>
    <string name="person">Person</string>
    <string name="group">Group</string>
    <string name="user_groups">Your groups</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="enter_group_name">Enter your group name</string>
    <string name="confirm">Confirm</string>
    <string name="enter_group_id">Enter the group ID</string>

    //notifications fragment
    <string name="expense_name">Expense Name</string>
    <string name="transaction_details">Your Expenses</string>
    <string name="action_returned">you paid xxx yyy</string>
    <string name="action_reminder">xxx nudged you to return yyy</string>
    <string name="nudge">Nudge</string>

    //expense fragment
    <string name="settle_up">Select Item to Settle Up</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="settle_all">Settle All</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="settle">Settle</string>
    <string name="all_settled">All Settled!</string>
    <string name="expense_description">Expense Description</string>
    <string name="expenses">Expenses</string>
    <string name="to">To XXXXX </string>
    <string name="to_friend">To Friend </string>


    //toolbar
    <string name="back_arrow">Back</string>
    <string name="toolbar_title">Toolbar title</string>


    //money owe
    <string name="you_owe_who">Who do you owe?</string>
    <string name="who_owe_you">Who owes you?</string>
    <string name="latest">Latest</string>
    <string name="earliest">Earliest</string>
    <string name="amount">Amount</string>

    //group homepage
    <string name="expense_summary">Expense Summary</string>
    <string name="settled_with">You are settled with</string>
    <string name="group_settings">Group Settings</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_category">Add category</string>
    <string name="overall">Overall</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="shopping">Shopping</string>
    <string name="utilities">Utilities</string>
    <string name="rent">Rent</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="you_lent">You lent</string>
    <string name="you_borrowed">You borrowed</string>
    <string name="not_involved">Not involved</string>
    <string name="people_owe">Sean $12.50 \nJing Kang $15.80</string>
    <string name="people_owed">Kushi $100.00 \nFaustina $12.70</string>
    <string name="people_settled">Megan $0.00 \nWen Kai $0.00</string>

    //expense
    <string name="expense_title">Expense Title</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_status">XXX paid $YYY</string>
    <string name="expense_amount">$xx.yy</string>
    <string name="you_paid">Group Members</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Choose from Gallery</string>

    //group settings
    <string name="group_members">Group Members</string>
    <string name="leave_group">Leave</string>
    <string name="remove">Remove</string>
    <string name="add_members">Add Members</string>
    <string name="delete_group">Delete Group</string>
    <string name="group_code">Group Code</string>
    <string name="name_test">Example User</string>
    <string name="email_test">1009999@sutd.edu.sg</string>
    <string name="code">rck6v9</string>


    //manual scanner
    <string name="manual_input">Manual Input</string>
    <string name="scan_receipt">Scan Receipt</string>

    //receipt overview
    <string name="receipt_details">Receipt Details</string>
    <string name="expense_name_input">Input the name of expense</string>
    <string name="expense_date_time">12.37 Wednesday 12/03/2025</string>
    <string name="filter_by">Filter By</string>
    <string name="number">Number</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Price</string>
    <string name="total">Grand Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="with_gst">9% GST</string>
    <string name="with_service_charge">10% Service Charge</string>
    <string name="include_gst">Include GST</string>
    <string name="include_service_charge">Include Service Charge</string>
    <string name="add_people_text">Add people and split bill</string>
    <string name="redo_ocr">Redo scan</string>
    <string name="zero">0.0</string>
    <string name="NA">NA</string>

    //expense details
    <string name="add_people">Add People</string>
    <string name="select_group">Select Group to Split Bill</string>
    <string name="selected_group">Selected Group Name</string>
    <string name="expense_details">Expense Details</string>
    <string name="expense_name_text">Type in the name of your expense</string>
    <string name="select_category">Select Category</string>
    <string name="category_name">Category Name</string>
    <string name="items">Items</string>
    <string name="add_item">Add Item</string>
    <string name="select_all">Select All</string>

    //add item fragment
    <string name="item_name_text">Item Name</string>
    <string name="item_name_prompt">Enter your item name</string>
    <string name="item_price_text">Item Price</string>
    <string name="item_price_prompt">Enter your item price</string>


    //after split bill
    <string name="summary">Summary</string>
    <string name="bill_split">Bill has been split!</string>
    <string name="avatar">Avatar</string>
    <string name="you_paid_for">xx owes you $yy for zz</string>


    //friends fragment
    <string name="search_friend">Search for a friend:</string>
    <string name="your_friends">Your friends!</string>
    <string name="enter_name">Enter name</string>
    <string name="add_friend">Add Friend</string>
    <string name="delete_friend">Delete Friend</string>

    //profile fragment
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_language">Change Language</string>
    <string name="user_activity">User Activity</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="light_mode">Light Mode</string>
    <string name="privacy">Privacy</string>
    <string name="user_code">User Code</string>
    <string name="user_code_test">12345678</string>
    <string name="phone_test">+65 0000 0000</string>






    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>