<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/layout_border_light_mode"
    tools:context=".dialogFragments.DialogFragment_CreateGroup">

    <TextView
        android:id="@+id/create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:layout_marginTop="10dp"
        style="@style/textViewBigDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/group_name"/>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"

        style="@style/textViewMediumDarkMode"
        app:layout_constraintStart_toStartOf="@id/group_name_input"
        app:layout_constraintTop_toBottomOf="@id/create_group"/>
    <EditText
        android:id="@+id/group_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_group_name"
        style="@style/editTextFontDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_name"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        style="@style/ButtonDarkMode"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_name_input"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>