<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/layout_border_light_mode">

    <ImageView
        android:id="@+id/member_avatar"
        android:contentDescription="@string/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/avatar"
        app:tint ="@color/text_colour_dark_mode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/group_name"/>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:layout_margin="5dp"
        style="@style/textViewMediumDarkMode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/member_avatar"
        app:layout_constraintBottom_toTopOf="@id/notification"/>

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_reminder"
        app:layout_constraintStart_toStartOf="@id/group_name"
        app:layout_constraintTop_toBottomOf="@id/group_name"
        app:layout_constraintBottom_toTopOf="@id/nudge_button"
        style="@style/textViewSmallDarkMode"/>

    <Button
        android:id="@+id/nudge_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nudge"
        style="@style/ButtonLightMode"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/notification"
        app:layout_constraintStart_toStartOf="@id/notification"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
