<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:layout_marginVertical="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/layout_border_dark_mode">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        style="@style/textViewMediumLightMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        style="@style/textViewMediumLightMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/add_people_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_icon"
        android:contentDescription="@string/add_members"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        app:layout_constraintStart_toStartOf="@id/item_name"
        app:layout_constraintEnd_toStartOf="@id/item_people"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/item_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_people_text"
        style="@style/textViewSmallLightMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_people_button"
        app:layout_constraintBottom_toBottomOf="@id/add_people_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>