<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/layout_border_transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:padding="10dp"
        android:maxLines="3"
        android:singleLine="false"
        style="@style/textViewMediumDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/group_date"/>

    <TextView
        android:id="@+id/group_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_created"
        app:layout_constraintTop_toBottomOf="@id/group_name"
        style="@style/textViewSmallDarkMode"
        app:layout_constraintBottom_toTopOf="@id/group_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/group_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_owe"
        style="@style/textViewSmallDarkMode"
        app:layout_constraintTop_toBottomOf="@id/group_date"
        app:layout_constraintBottom_toTopOf="@id/group_homepage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/group_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_homepage"
        style="@style/ButtonLightMode"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_amount"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>