<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_light_mode"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/hello_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/textViewBigLightMode"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/owe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_user"
        android:background="@drawable/layout_border_highlight1_mode">

        <TextView
            android:id="@+id/owe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/owe_layout"
            style="@style/textViewBigLightMode"/>

        <TextView
            android:id="@+id/money_owe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owe_amount"
            app:layout_constraintTop_toBottomOf="@id/owe"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/textViewBigLightMode"/>

        <Button
            android:id="@+id/owe_more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_details"
            app:layout_constraintTop_toBottomOf="@id/owe"
            app:layout_constraintStart_toEndOf="@id/money_owe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ButtonLightMode"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/owed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/owe_layout"
        android:background="@drawable/layout_border_highlight3_mode">

        <TextView
            android:id="@+id/owed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/owed_layout"
            style="@style/textViewBigLightMode"/>

        <TextView
            android:id="@+id/money_owed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owed_amount"
            app:layout_constraintTop_toBottomOf="@id/owed"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/textViewBigLightMode"/>

        <Button
            android:id="@+id/owed_more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_details"
            app:layout_constraintTop_toBottomOf="@id/owed"
            app:layout_constraintStart_toEndOf="@id/money_owed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ButtonLightMode"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/notification_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_details"
        android:layout_marginVertical="20dp"
        style="@style/textViewMediumLightMode"
        app:layout_constraintStart_toStartOf="@id/owed_layout"
        app:layout_constraintTop_toBottomOf="@id/owed_layout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_notifications"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_light_mode"
        app:layout_constraintTop_toBottomOf="@id/notification_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>